--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -1,6 +1,6 @@
 :root {
-  --red: rgb(185, 23, 0);
-  --black: #111;
+  --red: rgb(66, 24, 29);
+  --black: #333333;
   --gold: rgb(236, 173, 59);
   --white: rgb(223, 239, 254);
   --brown: rgb(120, 79, 33);
@@ -36,7 +36,7 @@ body {
 .slide {
   background-color: var(--gold);
   max-width: 50em;
-  min-height: 600px;
+  min-height: 500px;
   margin: 0 auto;
   margin-bottom: 200px;
   padding: 30px;
@@ -52,4 +52,8 @@ li {
   list-style: outside '\261B';
   padding-left: 8px;
   padding-bottom: 32px;
+}
+
+pre {
+  background-color: white;
 }
